<resources>
    <string name="app_name">SplitBill</string>
    <string name="lbl_merchant_icon">Merchant Icon</string>
    <string name="lbl_date_time">利用日時</string>
    <string name="lbl_slip_number">伝票番号</string>
    <string name="lbl_total_payment_amount">決済総額</string>
    <string name="lbl_rakuten_cash">楽天キャッシュ</string>
    <string name="lbl_points_earned">獲得ポイント</string>
    <string name="split_bill">Split Bill</string>
    <string name="title_merchant">Merchant:</string>
    <string name="default_merchant_name">Rakuten Cafe</string>
    <string name="title_date">Date:</string>
    <string name="default_date">10/12/2023</string>
    <string name="title_amount">Amount:</string>
    <string name="default_amount">4500</string>
    <string name="title_participants">Participants:</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="title_rakuten_history">楽天ペイご利用履歴 [Sample Page]</string>
    <string name="dialog_title_confirm_amount">Confirm Amount</string>
    <string name="button_send_notification">Send Notification</string>
    <string name="default_contact_name">Other User</string>
    <string name="default_contact_number">123456789</string>
    <string name="button_plus">+</string>
    <string name="button_cross">x</string>
    <string name="payment_confirmation_description">The above listed participants will receive a message once you click this button.</string>
    <string name="split_bill_history_title">Split Bill History</string>
    <string name="split_history_paid_description">Paid Count :</string>
    <string name="default_paid_count">0</string>
    <string name="paid_count_slash">/</string>
    <string name="default_max_paid_count">3</string>
    <string name="split_bill_history_button">Split Bill History</string>
</resources>