<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_contact_name"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:theme="@style/RTheme.TextView.SubText"/>
        <TextView
            android:id="@+id/tv_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cross"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:theme="@style/RTheme.TextView.SubText"
            app:layout_constraintEnd_toEndOf="parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_user_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_amount"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_gray"
        android:theme="@style/RTheme.TextView.SubText"/>

    </LinearLayout>