<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <TextView
            android:id="@+id/tv_close_confirmation_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cross"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginEnd="7dp"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/RTheme.TextView.Text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_title_confirmation_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_confirm_amount"
            android:textSize="20sp"
            android:textStyle="bold"
            android:theme="@style/RTheme.TextView.Main.Title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_participant_name_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:layout_gravity="start"
            android:theme="@style/RTheme.TextView.SubText"/>
        <TextView
            android:id="@+id/tv_participant_amount_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:layout_gravity="end"
            android:gravity="end"
            android:theme="@style/RTheme.TextView.SubText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/bt_send_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send_notification"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:theme="@style/RTheme.Button"/>
    </LinearLayout>


</LinearLayout>